# db-rs

./: Cargo.toml  flake.nix  rust-toolchain
crates/bplustree/: Cargo.toml
crates/bplustree/src/: branch.rs  leaf.rs
crates/btree/: Cargo.toml
crates/btree/src/: lib.rs
crates/naivedb/: Cargo.toml
crates/naivedb-api/: Cargo.toml
crates/naivedb-api/src/: lib.rs  parsing.rs
crates/naivedb-api/src/parsing/: lexer.rs  nom.rs  parser.rs
crates/naivedb-bplustree-storage/: Cargo.toml
crates/naivedb-bplustree-storage/src/: branch.rs  leaf.rs  lib.rs  meta.rs  node.rs
crates/naivedb-kernel/: Cargo.toml
crates/naivedb-kernel/src/: disk.rs  inmemory.rs  lib.rs
crates/naivedb-kernel/src/disk/: slotted.rs  tuple.rs
crates/naivedb/src/: compiler.rs  disk.rs  lib.rs  query.rs  table.rs
crates/naivedb/src/inmemory/: syntax.rs
crates/naivedb/src/table/: poormans.rs
crates/p-btree/: Cargo.toml
crates/p-btree/src/: lib.rs
crates/prelude/: Cargo.toml
crates/prelude/src/: lib.rs  result.rs
docs/buggy-btree-sample/: README.md  btree.go
docs/deepdive/: index.md
docs/til/: bplustree.md  buffer-pool-manager.md  query.md  table.md
