[package]
name = "naivedb_bplustree_storage"
version = "0.1.0"
edition.workspace = true
authors = ["110416 <contact.110416@gmail.com>"]
description = "A B+ tree implementation for Rust"

[dependencies]
zerocopy.workspace = true
bincode = "1.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
prelude = { path = "../prelude" }
naivedb_kernel = { path = "../naivedb-kernel" }
[dev-dependencies]
tempfile = "3.1"