[package]
name = "naivedb"
version = "0.1.0"
edition.workspace = true
authors = ["110416 <contact.110416@gmail.com>"]
description = "Naive DB implementation based on Relly"

[dependencies]
zerocopy.workspace = true
thiserror = "1.0"
anyhow = "1.0"
prelude = { path = "../prelude" }
naivedb_kernel = { path = "../naivedb-kernel" }
naivedb_bplustree_storage = { path = "../naivedb-bplustree-storage" }